# entries-backend

./: *shell*  .env  .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  License.md  Readme.md  build.rs  docker-compose.yml  docker.env  endpoints-guide.md  entrypoint.sh  open-dev-env.sh  out.txt  sample.env  test.env  vscode-sample-launch.json
budgetapp-job-scheduler/: Cargo.toml
budgetapp-job-scheduler/conf/: jobs-conf.toml  sample.jobs-conf.toml
budgetapp-job-scheduler/src/: env.rs  main.rs
budgetapp-job-scheduler/src/jobs/: clear_authorization_attempts.rs  clear_old_notifications.rs  clear_otp_attempts.rs  clear_password_attempts.rs  clear_unverified_users.rs  clear_user_lookup_attempts.rs  delete_users.rs  mod.rs  unblacklist_expired_refresh_tokens.rs  unblacklist_expired_tokens.rs
budgetapp-job-scheduler/src/runner/: mod.rs
budgetapp-server/: Cargo.toml
budgetapp-server/assets/: common-passwords.txt
budgetapp-server/conf/: sample.server-conf.toml  server-conf.toml
budgetapp-server/src/: env.rs  main.rs
budgetapp-server/src/handlers/: auth.rs  budget.rs  index.rs  mod.rs  tombstone.rs  user.rs
budgetapp-server/src/middleware/: app_version.rs  auth.rs  budget_access_token_header.rs  budget_token_header.rs  mod.rs  special_access_token.rs  throttle.rs
budgetapp-server/src/services/api/: auth.rs  budget.rs  mod.rs  tombstone.rs  user.rs
budgetapp-utils/: Cargo.toml  build.rs  test-conf.toml
budgetapp-utils/migrations/00000000000001_init/: down.sql  up.sql
budgetapp-utils/src/: lib.rs  test_env.rs
budgetapp-utils/src/argon2_hasher/: mod.rs
budgetapp-utils/src/auth_token/: mod.rs
budgetapp-utils/src/budget_token/: mod.rs
budgetapp-utils/src/common_password_set/: mod.rs
budgetapp-utils/src/db/: auth.rs  budget.rs  job_registry.rs  mod.rs  tombstone.rs  user.rs
budgetapp-utils/src/email/: mod.rs
budgetapp-utils/src/email/senders/: amazon_ses.rs  mod.rs
budgetapp-utils/src/models/: authorization_attempts.rs  blacklisted_token.rs  buddy_relationship.rs  buddy_request.rs  budget.rs  budget_accept_key.rs  budget_access_key.rs  budget_share_event.rs  budget_share_invite.rs  budget_share_key.rs  category.rs  entry.rs  job_registry_item.rs  mod.rs  otp_attempts.rs  password_attempts.rs  tombstone.rs  user.rs  user_budget.rs  user_deletion_request.rs  user_deletion_request_budget_key.rs  user_keystore.rs  user_lookup_attempts.rs  user_notification.rs  user_otp.rs  user_preferences.rs  user_security_data.rs  user_tombstone.rs
budgetapp-utils/src/otp/: mod.rs
budgetapp-utils/src/password_hasher/: mod.rs
budgetapp-utils/src/request_io/: inputs.rs  outputs.rs
budgetapp-utils/src/schema/: mod.rs
budgetapp-utils/src/token/: auth_token.rs  budget_accept_token.rs  budget_access_token.rs  budget_invite_sender_token.rs  mod.rs  special_access_token.rs
budgetapp-utils/src/validators/: mod.rs
entries-common/: Cargo.toml  build.rs
entries-common/migrations/00000000000001_init/: down.sql  up.sql
entries-common/src/: lib.rs
entries-common/src/db/: auth.rs  budget.rs  container.rs  job_registry.rs  mod.rs  user.rs
entries-common/src/email/: mod.rs
entries-common/src/messages/: mod.rs  protobuf.rs
entries-common/src/models/: budget_accept_key.rs  budget_access_key.rs  category.rs  container.rs  container_accept_key.rs  container_access_key.rs  container_share_invite.rs  entry.rs  job_registry_item.rs  mod.rs  user.rs  user_deletion_request.rs  user_deletion_request_budget_key.rs  user_deletion_request_container_key.rs  user_flags.rs  user_keystore.rs  user_otp.rs  user_preferences.rs
entries-common/src/otp/: mod.rs
entries-common/src/schema/: mod.rs
entries-common/src/threadrand/: mod.rs
entries-common/src/token/: auth_token.rs  budget_accept_token.rs  budget_access_token.rs  budget_invite_sender_token.rs  container_accept_token.rs  container_access_token.rs  container_invite_sender_token.rs  mod.rs
entries-common/src/validators/: mod.rs
entries-job-scheduler/: Cargo.toml  sample.env
entries-job-scheduler/conf/: .gitignore  sample.jobs-conf.toml
entries-job-scheduler/src/: env.rs  main.rs
entries-job-scheduler/src/jobs/: clear_expired_budget_invites.rs  clear_expired_container_invites.rs  clear_expired_otps.rs  clear_old_user_deletion_requests.rs  clear_throttle_table.rs  clear_unverified_users.rs  delete_users.rs  mod.rs  unblacklist_expired_tokens.rs
entries-job-scheduler/src/runner/: mod.rs
entries-job-scheduler/test-debug-conf/: jobs-conf.toml
entries-server/: Cargo.toml  sample.env
entries-server/conf/: .gitignore  sample.server-conf.toml
entries-server/src/: env.rs  main.rs
entries-server/src/handlers/: auth.rs  budget.rs  container.rs  error_reporting.rs  health.rs  mod.rs  user.rs
entries-server/src/middleware/: app_version.rs  auth.rs  client_type.rs  cors.rs  csrf.rs  limiter.rs  mod.rs  special_access_token.rs  throttle.rs
entries-server/src/utils/: limiter_table.rs  mod.rs
entries-server/test-debug-conf/: server-conf.toml
entries-server/web/static/: styles.css
entries-utils/: Cargo.toml  build.rs  test-conf.toml
entries-utils/migrations/00000000000001_init/: down.sql  up.sql
entries-utils/src/: lib.rs  test_env.rs
entries-utils/src/argon2/: mod.rs
entries-utils/src/argon2_hasher/: mod.rs
entries-utils/src/argon2id/: mod.rs
entries-utils/src/db/: auth.rs  budget.rs  job_registry.rs  mod.rs  throttle.rs  user.rs
entries-utils/src/email/: mod.rs
entries-utils/src/messages/: mod.rs  protobuf.rs  query.rs
entries-utils/src/models/: blacklisted_token.rs  budget.rs  budget_accept_key.rs  budget_share_invite.rs  category.rs  entry.rs  mod.rs  signin_nonce.rs  throttleable_attempt.rs  throttleable_attempts.rs  user.rs  user_backup_code.rs  user_deletion_request.rs  user_keystore.rs  user_otp.rs  user_preferences.rs
entries-utils/src/otp/: mod.rs
entries-utils/src/request_io/: inputs.rs  mod.rs  outputs.rs
entries-utils/src/schema/: mod.rs
entries-utils/src/token/: auth_token.rs  budget_accept_token.rs  budget_access_token.rs  budget_invite_sender_token.rs  mod.rs
(+89 files in other folders)
