[package]
name = "budgetapp-server"
authors = ["Tanner Davies <tanner.e.davies@gmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
base64 = "0.13"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4", features = ["postgres", "uuidv07", "r2d2", "chrono"] }
diesel_migrations = "1.4"
env_logger = "0.9"
futures = "0.3"
hex = "0.4"
hmac = "0.12"
lazy_static = "1.4"
log = "0.4"
rand = "0.8"
ring = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
toml = "0.5"
uuid = { version = "0.8", features = ["serde", "v4"] }

[dev-dependencies]
actix-rt = "2.5"

[build-dependencies]
bindgen = "0.60"
cc = { version = "1.0", features = ["parallel"] }

