[package]
name = "budgetapp_job_scheduler"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
budgetapp_utils = { path = "../budgetapp-utils" }
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.0", features = ["postgres", "uuid", "r2d2", "chrono"] }
env_logger = "0.10"
lazy_static = "1.4"
log = "0.4"
num_cpus = "1.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
uuid = { version = "1.2", features = ["serde", "v4"] }
