[package]
name = "budgetapp_job_scheduler"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
budgetapp_utils = { path = "../budgetapp-utils" }
env_logger = "0.10"
lazy_static = "1.4"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
uuid = { version = "1.2", features = ["serde", "v4"] }
