[package]
name = "budgetapp_utils"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
aes-gcm = "0.10"
base64 = "0.13"
diesel = { version = "2.0", features = ["postgres", "serde_json", "uuid", "r2d2"] }
hex = "0.4"
hmac = "0.12"
log = "0.4"
num_cpus = "1.14"
rand = "0.8"
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "2.3", features = ["base64"] }
sha1 = "0.10"
sha2 = "0.10"
uuid = { version = "1.2", features = ["serde", "v4"] }
zeroize = { version = "1.5", features = ["zeroize_derive"] }

[dev-dependencies]
lazy_static = "1.4"
num_cpus = "1.14"
rand = "0.8"
toml = "0.5"

[build-dependencies]
bindgen = "0.63"
cc = { version = "1.0", features = ["parallel"] }
