[package]
name = "entries_common"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = "0.1.*"
base64 = "0.22.*"
diesel = { version = "2.2.*", features = ["postgres", "uuid", "r2d2"] }
ed25519-dalek = "2.1.*"
hmac = "0.12.*"
lettre = { version = "0.11.*", features = ["tokio1-native-tls"] }
log = "0.4.*"
num_cpus = "1.16.*"
prost = "0.13.*"
prost-types = "0.13.*"
rand = "0.8.*"
r2d2 = "0.8.*"
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
sha2 = "0.10.*"
uuid = { version = "1.11.*", features = ["serde", "v4"] }
zeroize = { version = "1.8.*", features = ["zeroize_derive"] }

[dev-dependencies]
ed25519-dalek = { version = "2.1.*", features = ["rand_core"] } 
once_cell = "1.20.*"

[build-dependencies]
prost-build = "0.13.*"
