[package]
name = "entries_common"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = "0.1.*"
base64 = "0.22.*"
bb8 = "0.9.*"
diesel = { version = "2.3.*", features = ["postgres", "uuid"] }
diesel-async = { version = "0.7.*", features = ["postgres", "bb8"] }
ed25519-dalek = "2.2.*"
hmac = "0.12.*"
lettre = { version = "0.11.*", features = ["tokio1-native-tls"] }
log = "0.4.*"
num_cpus = "1.17.*"
prost = "0.13.*"
prost-types = "0.13.*"
rand = "0.8.*"
rand_chacha = { version = "0.3.*" }
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
sha2 = "0.10.*"
uuid = { version = "1.19.*", features = ["serde", "v7"] }
zeroize = { version = "1.8.*", features = ["zeroize_derive"] }

[dev-dependencies]
ed25519-dalek = { version = "2.2.*", features = ["rand_core"] } 
futures = "0.3.*"
once_cell = "1.21.*"
tokio = { version = "1.48.*", features = ["rt", "macros"] }

[build-dependencies]
prost-build = "0.13.*"
