[package]
name = "entries_job_scheduler"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = "0.1.*"
entries_common = { path = "../entries-common" }
flexi_logger = { version = "0.29.*", features = ["async", "compress"], default-features = false }
futures = "0.3.*"
log = "0.4.*"
num_cpus = "1.16.*"
once_cell = "1.20.*"
tokio = { version = "1.43.*", features = ["rt-multi-thread", "time"] }
uuid = { version = "1.12.*", features = ["serde", "v4"] }
zeroize = { version = "1.8.*", features = ["zeroize_derive"] }

[dev-dependencies]
diesel = { version = "2.2.*", features = ["postgres", "uuid", "r2d2"] }
tokio = { version = "1.43.*", features = ["macros", "sync"] }
rand = "0.8.*"
