[package]
name = "entries_job_scheduler"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = "0.1.*"
entries_common = { path = "../entries-common" }
flexi_logger = { version = "0.31.*", features = ["async", "compress"], default-features = false }
futures = "0.3.*"
log = "0.4.*"
num_cpus = "1.17.*"
once_cell = "1.21.*"
tokio = { version = "1.48.*", features = ["rt-multi-thread", "time"] }
uuid = { version = "1.19.*", features = ["serde", "v7"] }
zeroize = { version = "1.8.*", features = ["zeroize_derive"] }

[dev-dependencies]
diesel = { version = "2.3.*", features = ["postgres", "uuid"] }
diesel-async = { version = "0.7.*", features = ["postgres", "bb8"] }
tokio = { version = "1.48.*", features = ["macros", "sync"] }
rand = "0.8.*"
