[package]
name = "entries_server"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
entries_common = { path = "../entries-common" }
actix-protobuf = "0.11.*"
actix-web = "4.10.*"
argon2-kdf = "1.6.*"
base64 = "0.22.*"
diesel = { version = "2.2.*", features = ["postgres", "uuid", "r2d2"] }
ed25519-dalek = { version = "2.1.*", features = ["rand_core"] }
flexi_logger = { version = "0.30.*", features = ["async", "compress"], default-features = false }
futures = "0.3.*"
lettre = "0.11.*"
log = "0.4.*"
num_cpus = "1.16.*"
once_cell = "1.21.*"
openssl = "0.10.*"
prost = "0.13.*"
rand = "0.8.*"
rand_chacha = "0.3.*"
rayon = "1.10.*"
sha2 = "0.10.*"
serde_json = "1.0.*"
tokio = "1.44.*"
uuid = { version = "1.16.*", features = ["v7"] }
zeroize = { version = "1.8.*", features = ["zeroize_derive"] }

[dev-dependencies]
actix-http = "3.10.*"
actix-rt = "2.10.*"
serde = "1.0.*"
