[package]
name = "entries_server"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
entries_common = { path = "../entries-common" }
actix-protobuf = "0.11.*"
actix-web = "4.12.*"
argon2-kdf = "1.6.*"
base64 = "0.22.*"
bb8 = "0.9.*"
diesel = { version = "2.3.*", features = ["postgres", "uuid"] }
diesel-async = { version = "0.7.*", features = ["postgres", "bb8"] }
ed25519-dalek = { version = "2.2.*", features = ["rand_core"] }
flexi_logger = { version = "0.31.*", features = ["async", "compress"], default-features = false }
futures = "0.3.*"
hashbrown = "0.16.*"
ahash = "0.8.*"
lettre = "0.11.*"
log = "0.4.*"
num_cpus = "1.17.*"
once_cell = "1.21.*"
openssl = "0.10.*"
prost = "0.13.*"
rand = "0.8.*"
rand_chacha = "0.3.*"
rayon = "1.11.*"
sha2 = "0.10.*"
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
tokio = "1.48.*"
uuid = { version = "1.19.*", features = ["v7"] }
zeroize = { version = "1.8.*", features = ["zeroize_derive"] }

[dev-dependencies]
actix-http = "3.11.*"
actix-rt = "2.11.*"
