[package]
name = "entries_utils"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
aes-gcm = { version = "0.10", features = ["zeroize"] }
async-trait = "0.1"
base64 = "0.21"
diesel = { version = "2.1", features = ["postgres", "uuid", "r2d2"] }
ed25519-dalek = { version = "2.0.0-rc.3", features = ["rand_core", "zeroize"] }
hex = "0.4"
hmac = "0.12"
lettre = { version = "0.10", features = ["tokio1-native-tls"] }
log = "0.4"
num_cpus = "1.15"
rand = "0.8"
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.0", features = ["base64", "hex"] }
sha1 = "0.10"
sha2 = "0.10"
uuid = { version = "1.3", features = ["serde", "v4"] }
zeroize = { version = "1.6", features = ["zeroize_derive"] }

[dev-dependencies]
lazy_static = "1.4"
toml = "0.7"
